[package]
name = "responder"
version = "0.1.0"
authors = ["Livio Ribeiro <livioribeiro@outlook.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
rotor = "0.6"
rotor-http = "0.7"
rotor-tools = "0.3"
quire = "0.1"
rustc-serialize = "0.3"
regex = "0.1"
log = "0.3"
env_logger = "0.3"
chrono = "0.2"
clap = "2.9"
